--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,10 @@
     "react/jsx-handler-names": 0,
     "react/jsx-fragments": 0,
     "react/no-unused-prop-types": 0,
-    "import/export": 0
+    "import/export": 0,
+    "prefer-const": 0,
+    "react/self-closing-comp": 0,
+    "react/jsx-curly-brace-presence": 0,
+    "react/jsx-no-target-blank": 0
   }
 }
