--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@effectnode/cms",
+  "name": "effectnode-cms",
   "version": "1.0.0",
   "description": "Effectnode VFX CMS with firebase",
   "author": "wonglok",
