--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,7 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
-    "@effectnode/cms": "link:..",
+    "effectnode-cms": "link:..",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
     "react-router-dom": "^5.2.0",
