--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@react-three/drei": "^7.3.1",
     "@react-three/fiber": "^7.0.6",
+    "copy-to-clipboard": "^3.3.1",
     "firebase": "^8.8.1",
     "styled-components": "^5.3.0",
     "three": "^0.131.1"
