--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "dependencies": {
+    "effectnode": "^1.5.3",
     "effectnode-cms": "link:..",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
